fix levelbar overflow

--- a/old-ubuntu-human/gtk-3.0/sliders.css
+++ b/old-ubuntu-human/gtk-3.0/sliders.css
@@ -302,12 +302,10 @@ levelbar trough {
 }
 
 levelbar.horizontal trough {
-	margin: 0 -1px;
 	min-height: 9px;
 }
 
 levelbar.vertical trough {
-	margin: -1px 0;
 	min-width: 9px;
 }
 
